app/assets/stylesheets/pages/projet/_projet.scss
.projet {
  padding-top: 130px !important;
  padding-bottom: 60px !important;
  min-height: 100vh;
  h2 {
    color: $main-yellow;
    font-family: $montserrat;
    font-size: 36px;
    font-weight: 500;
    font-style: italic;
    letter-spacing: 2px;
  }
  h3 {
    color: $main-white;
    font-family: $flamenco;
    font-size: 24px;
    letter-spacing: -2px;
    font-weight: normal;
    margin-top: 8px !important;
  }
  .content-projet {
    margin-top: 70px !important;
    height: auto;
    padding: 0;
    max-width: 1140px;
    width: 80%;
    display: grid;
    grid-template-columns: repeat(auto-fill, 300px);
    justify-content: center;
    grid-gap: 35px;
  }
}

.card {
  width: 300px;
  min-height: 450px;
  background: none;
  .card-img {
    width: 100%;
    height: 222px;
    position: relative;
    background-color: cornflowerblue;
    .over {
      background-color: $main-blue;
      width: 100%;
      height: 222px;
      position: absolute;
      opacity: 0.4;
      top: 0;
      transition: all 0.2s ease-in-out;
    }
    .img {
      width: 100%;
    }
  }
  .card-info {
    width: 100%;
    background-color: $main-white;
    position: relative;
    padding-bottom: 25px !important;
    h4 {
      font-size: 24px;
      color: $main-blue;
      font-family: $montserrat;
      letter-spacing: -2px;
      padding-top: 18px !important;
    }
    .separate {
      width: 150px;
      height: 2px;
      background-color: $main-yellow;
      margin-top: 18px !important;
    }
    p {
      font-family: $hind;
      font-size: 14px;
      color: $main-blue;
      letter-spacing: -1px;
      font-weight: lighter;
      padding: 0px 20px !important;
      padding-top: 14px !important;
      margin-bottom: 20px !important;
    }
    a {
      padding: 10px 15px !important;
      background-color: $main-blue;
      color: $main-yellow;
      border-radius: 5px;
      font-size: 14px;
      transition: all 0.2s ease-in-out;
      &:hover {
        background-color: $main-yellow;
        color: $main-blue;
        transition: all 0.2s ease-in-out;
        text-decoration: none;
      }
    }
  }
  &:hover {
    .over {
      top: 230px;
      transition: all 0.2s ease-in-out;
    }
  }
}

